# Parallel-LU-Gaussian-Elimination-with-MPI

./: README.md
MPI_LU/: CMakeLists.txt  MPI_LU_Block.cpp  MPI_LU_Block.h  MPI_LU_Pipeline.cpp  MPI_LU_Pipeline.h  MPI_LU_Recycle.cpp  MPI_LU_Recycle.h  Matrix.cpp  Matrix.h  main.cpp
